# lightspeed

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  deny.toml  publish_all.sh  rustfmt.toml
app/: Cargo.toml
auth/: Cargo.toml
auth/src/: config.rs  error.rs  lib.rs  service.rs
auth/src/dto/: auth_dto.rs  change_password_dto.rs  create_login_dto.rs  create_user_dto.rs  login_dto.rs  login_response_dto.rs  mod.rs  reset_password_dto.rs  send_new_activation_token_dto.rs  send_reset_password_dto.rs  token_dto.rs
auth/src/model/: auth_account.rs  mod.rs  token.rs
auth/src/repository/: auth_account.rs  db.rs  mod.rs  token.rs
auth/src/repository/mysql/: mod.rs  mysql_auth_account.rs  mysql_token.rs
auth/src/repository/pg/: mod.rs  pg_auth_account.rs  pg_token.rs  token.rs
auth/src/repository/postgres/: mod.rs  pg_auth_account.rs  pg_token.rs
auth/src/repository/sqlite/: mod.rs  sqlite_auth_account.rs  sqlite_token.rs
auth/src/repository/sqlx_mysql/: mod.rs
auth/src/repository/sqlx_postgres/: mod.rs  pg_auth_account.rs
auth/src/repository/sqlx_sqlite/: mod.rs
auth/src/service/: auth_account.rs  db.rs  mod.rs  password_codec.rs  token.rs
auth/tests/: auth_test_mysql.rs  auth_test_pg.rs  auth_test_postgres.rs  auth_test_sqlite.rs  auth_test_sqlx_mysql.rs  auth_test_sqlx_postgres.rs  auth_test_sqlx_sqlite.rs  test_pg.rs
auth/tests/tests/: util.rs
auth/tests/tests/service/: auth_account.rs  auth_account_it.rs  db.rs  token.rs  token_it.rs
cache/: Cargo.toml
cache/src/: dashmap.rs  hashmap.rs  lib.rs  moka.rs  tokio.rs
cms/: Cargo.toml  Cargo.toml_
cms/src/: config.rs  lib.rs
cms/src/dto/: create_content_dto.rs  create_project_dto.rs  create_schema_dto.rs  mod.rs
cms/src/model/: content.rs  mod.rs  project.rs  schema.rs  schema_content_mapping.rs
cms/src/repository/: mod.rs
cms/src/repository/pg/: mod.rs  pg_content.rs  pg_project.rs  pg_schema.rs  pg_schema_content_mapping.rs
cms/src/service/: content.rs  mod.rs  project.rs  schema.rs  schema_content_mapping.rs
cms/tests/: cms_test_pg.rs  cms_test_postgres.rs  test_pg.rs
cms/tests/tests/service/: mod.rs  (+3 more)
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  module.rs  utils.rs
core/src/model/: boolean.rs  language.rs  mod.rs  model_dto.rs
core/src/service/: auth.rs  jwt.rs  mod.rs  random.rs  validator.rs
core/src/web/: actix_web.rs  actix_web_3.rs  actix_web_4.rs  auth.rs  axum.rs  error.rs  mod.rs  poem.rs  types.rs  warp_03.rs  warp_web.rs
core/tests/: spike_ioc.rs  spike_ioc_typemap.rs
email/: Cargo.toml
email/src/: config.rs  error.rs  lib.rs  service.rs
email/src/model/: email.rs
email/src/repository/: email.rs  fixed_recipient_email.rs  full_email.rs  in_memory_email.rs  mod.rs  no_ops_email.rs
email/src/service/: email.rs  full_email.rs  in_memory_email.rs  mod.rs  no_ops_email.rs
email/tests/: email_test.rs  mail.rs
file_store/: Cargo.toml  Cargo.toml_
file_store/src/: config.rs  error.rs  lib.rs  utils.rs
file_store/src/dto/: mod.rs
file_store/src/model/: mod.rs
file_store/src/repository/: mod.rs
file_store/src/service/: file_store.rs
file_store/src/web/: actix_web.rs  actix_web_3.rs  actix_web_4.rs  axum.rs  mod.rs
file_store/tests/: file_store_test_mysql.rs  file_store_test_mysql.rs_  file_store_test_pg.rs  file_store_test_postgres.rs  file_store_test_sqlite.rs  file_store_test_sqlx_mysql.rs_  file_store_test_sqlx_postgres.rs  file_store_test_sqlx_sqlite.rs
file_store/tests/tests/: mod.rs
hash/: Cargo.toml
hash/src/: lib.rs
hash/src/dto/: mod.rs
hash/src/service/: hash_service.rs  mod.rs  validation_code_service.rs
hash/tests/: hash_test.rs  oregold_sms_tests.rs
hash/tests/service/: mod.rs  sms_service_it.rs  validation_code_service_it.rs
lightspeed/: Cargo.toml
lightspeed/src/: lib.rs
logger/: Cargo.toml
logger/src/: config.rs  lib.rs  main.rs  utils.rs
logger/tests/: logger_env_filter_setup_it.rs  logger_file_output_it.rs  logger_max_level_setup_it.rs
persistence/: Cargo.toml
persistence/src/model/: mod.rs
persistence/src/web/: actix_web.rs  axum.rs  mod.rs
persistence/tests/: file_store_test_pg.rs  opendal_spike.rs
scheduler/: Cargo.toml  README.md
scheduler/src/: error.rs  job.rs  lib.rs  schedule.rs  scheduler.rs
scheduler/src/repository/: memory.rs  mod.rs  mysql.rs  postgres.rs  sql.rs  sqlite.rs
scheduler/tests/: scheduler_memory_it.rs  scheduler_mysql_it.rs  scheduler_postgres_it.rs  scheduler_sqlite_it.rs
scheduler/tests/tests/: contention.rs  mod.rs  repository.rs  scheduler.rs
scheduler/tests/utils/: mod.rs
spikes/axum_leptos/: Cargo.toml  README.md
spikes/axum_leptos/src/: lib.rs  main.rs
spikes/axum_leptos/style/: main.css
spikes/axum_solidjs/: .gitignore  Cargo.toml  README.md
spikes/axum_solidjs/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
spikes/axum_solidjs/src/: main.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs  mysql.rs  pg.rs  sqlite.rs
validator/: Cargo.toml  README.md
validator/src/: boolean.rs  contains.rs  email.rs  error.rs  ip.rs  lib.rs  macros.rs  must_match.rs  order.rs  ownership.rs  urls.rs
validator/src/validation/: boolean.rs  contains.rs  credit_card.rs  custom.rs  email.rs  fields_match.rs  ip.rs  length.rs  mod.rs  password.rs  range.rs  regex.rs  url.rs
validator/tests/: validator_macro_bool_it.rs  validator_macro_contains_it.rs  validator_macro_context_it.rs  validator_macro_credit_card_it.rs  validator_macro_custom_it.rs  validator_macro_email_it.rs  validator_macro_error_strategy_it.rs  validator_macro_ip_it.rs  validator_macro_it.rs  validator_macro_length_it.rs  validator_macro_password_it.rs  validator_macro_range_it.rs  validator_macro_regex_it.rs  validator_macro_struct_match_it.rs  validator_macro_url_it.rs
validator_derive/: Cargo.toml
validator_derive/src/: lib.rs
validator_derive/src/validation/: boolean.rs  contains.rs  credit_card.rs  custom.rs  email.rs  ip.rs  length.rs  mod.rs  password.rs  range.rs  regex.rs  string_field.rs  struct_fields_match.rs  url.rs
(+177 files in other folders)
