[workspace]

members = [
    "auth",
    "cache",
    "cms",
    "core",
    "email",
    "file_store",
    "hash",
    "logger",
    "scheduler",
    "lightspeed",
]

[workspace.package]
version = "0.52.0"
edition = "2021"

[workspace.dependencies]
lightspeed_auth = { version = "0.52.0", path = "./auth" }
lightspeed_cache = { version = "0.52.0", path = "./cache" }
lightspeed_cms = { version = "0.52.0", path = "./cms" }
lightspeed_core = { version = "0.52.0", path = "./core" }
lightspeed_email = { version = "0.52.0", path = "./email" }
lightspeed_file_store = { version = "0.52.0", path = "./file_store" }
lightspeed_hash = { version = "0.52.0", path = "./hash" }
lightspeed_logger = { version = "0.52.0", path = "./logger" }
lightspeed_scheduler = { version = "0.52.0", path = "./scheduler" }

actix-files = { version = "0.6.0" }
actix-rt = "2"
actix-web = { version = "4.0.1" }
async-trait = "0.1"
atomic = "0.5"
axum = { version = "0.6" }
base64 = "0.20"
bcrypt = "0.13"
c3p0 = { version = "0.67", features = ["postgres", "migrate"] }
c3p0_common = { version = "0.67" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.8"
config = "0.13"
cron = "0.12.0"
dashmap = { version = "5" }
futures-util = { version = "0.3", default-features = false }
http = { version = "0.2" }
hyper = "0.14"
jsonwebtoken = "8.0"
lettre = { version = "0.10", default-features = false }
log = "0.4"
maybe-single = { version = "0.15.0", features =["async"] }
mime = { version = "0.3" }
mime_guess = { version = "2.0" }
once_cell = "1"
parking_lot = "0.12"
poem = { version = "1.3" }
poem-openapi = { version = "2" }
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
strum = { version = "0.24", features = ["derive"] }
tempfile = "3"
testcontainers = "0.12"
thiserror = { version = "1" }
tokio = { version = "1" }
tokio-util = { version = "0.7" }
tower = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
uuid = { version = "1", features = ["v4"] }
validator = "0.16"


# Link-time optimization (LTO) is a feature that lets the optimizer run on the entire program at once
# (including all its external crates), instead of just one crate at a time. This can produce better-optimized code
# However, it can take a very long time and use a huge amount of memory during compilation, so it is disabled by default.
[profile.release]
#lto = true

# To perform a CPU specific build, launch cargo with RUSTFLAGS='-C target-cpu=native'
# E.g.:
# > RUSTFLAGS='-C target-cpu=native' cargo bench
[profile.bench]
#debug = true
# When lto is enabled the profiler results are less clear.
# It should be taken into account a performance penalty of at least the 15% without the lto.
#lto = true
