[workspace]
resolver = "2"
members = [
    "auth",
    "cache",
    # "cms",
    "core",
    "email",
    "file_store",
    "hash",
    "logger",
    "scheduler",
    "lightspeed", 
    "test_utils",
]

[workspace.package]
version = "0.63.1"
edition = "2024"

[workspace.dependencies]
lightspeed_auth = { version = "0.63.1", path = "./auth" }
lightspeed_cache = { version = "0.63.1", path = "./cache" }
# lightspeed_cms = { version = "0.63.1", path = "./cms" }
lightspeed_core = { version = "0.63.1", path = "./core" }
lightspeed_email = { version = "0.63.1", path = "./email" }
lightspeed_file_store = { version = "0.63.1", path = "./file_store" }
lightspeed_hash = { version = "0.63.1", path = "./hash" }
lightspeed_logger = { version = "0.63.1", path = "./logger" }
lightspeed_persistence = { version = "0.63.1", path = "./persistence" }
lightspeed_scheduler = { version = "0.63.1", path = "./scheduler" }
lightspeed_test_utils = { version = "0.63.1", path = "./test_utils" }

actix-files = { version = "0.6.0" }
actix-rt = "2"
actix-web = { version = "4.0.1" }
arc-swap = "1.6"
axum = { version = "0.8" }
base64 = "0.22"
bcrypt = "0.17"
c3p0 = { version = "0.72" }
#c3p0 = { git = "https://github.com/ufoscout/c3p0", branch = "master", features = ["sqlx_postgres"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
config = "0.15"
cron = "0.15.0"
http = { version = "1" }
http-body-util = "0.1"
futures = { version = "0.3", default-features = false }
jsonwebtoken = "9.0"
lettre = { version = "0.11", default-features = false }
log = "0.4"
maybe-once = { version = "0.17", features =["tokio"] }
mime = { version = "0.3" }
mime_guess = { version = "2.0" }
moka = { version = "0.12", default-features = false, features = ["future"] }
opendal = { version = "0.53", default-features = false }
parking_lot = "0.12"
poem = { version = "3" }
poem-openapi = { version = "5" }
rand = "0.9"
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["macros", "migrate"] }
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
testcontainers = { package = "testcontainers-modules", version = "0.11", features = ["mysql", "postgres"] }
thiserror = { version = "2" }
tokio = { version = "1", default-features = false }
tower = { version = "0.5", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2", default-features = false }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.20", default-features = false }

[profile.dev]
debug = false

# Set the settings for all dependencies (but not this crate itself or any workspace member).
# This includes build dependencies.
# Level range is from 0 (default for dev) to 3 (default for release)
[profile.dev.package."*"]
opt-level = 1

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2
