[package]
name = "lightspeed_app"
license = "MIT"
version = "0.1.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
edition = "2018"

[dependencies]
lightspeed_auth = { version = "0.1", path = "../auth" }
lightspeed_cms = { version = "0.1", path = "../cms" }
lightspeed_scheduler = { version = "0.1", path = "../scheduler" }
