[package]
name = "lightspeed_auth"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []


[dependencies]
lightspeed_core = { workspace = true }
bcrypt = { workspace = true }
c3p0 = { workspace = true }
log = { workspace = true }
poem-openapi = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
config = { workspace = true }
lightspeed_logger = { workspace = true }
maybe-single = { workspace = true }
once_cell = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = []
poem_openapi = ["dep:poem-openapi", "lightspeed_core/poem_openapi"]