[package]
name = "lightspeed_auth"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []


[dependencies]
lightspeed_core = { workspace = true }
bcrypt = { workspace = true }
c3p0 = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
strum = { workspace = true }

[dev-dependencies]
config = { workspace = true }
lightspeed_logger = { workspace = true }
maybe-once = { workspace = true }
testcontainers = { workspace = true }
lightspeed_test_utils = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = []
mysql = ["c3p0/mysql", "c3p0/migrate", "sqlx"]
postgres = ["c3p0/postgres", "c3p0/migrate", "sqlx"]
sqlite = ["c3p0/sqlite", "c3p0/migrate", "sqlx"]