[package]
name = "lightspeed_cache"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["ufoscout <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }

[dev-dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = ["tokio"]
moka = ["dep:moka"]
tokio = ["dep:tokio", "dep:chrono"]
