[package]
name = "lightspeed_cms"
license = "MIT"
version = "0.45.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
lightspeed_cache = { version = "0.45.1", path = "../cache" }
lightspeed_core = { version = "0.45.1", path = "../core" }
async-trait = "0.1"
c3p0 = { version = "0.67", features = ["postgres", "migrate"] }
clap = { version = "3.1", default-features = false, features = ["derive", "env", "std"] }
log = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }


[dev-dependencies]
lightspeed_logger = { version = "0.45.1", path = "../logger" }
maybe-single = { version = "0.15.0", features =["async"] }
maplit = "1"
testcontainers = "0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }
