[package]
name = "lightspeed_cms"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
lightspeed_cache = { workspace = true }
lightspeed_core = { workspace = true, features = ["c3p0"] }
async-trait = { workspace = true }
c3p0 = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }


[dev-dependencies]
config = { workspace = true }
lightspeed_logger = { workspace = true }
maybe-single = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
