[package]
name = "lightspeed_core"
license = "MIT"
version = "0.49.0"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
jsonwebtoken = "8.0"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
validator = "0.14"

c3p0_common = { version = "0.64", optional = true }
actix-web = { version = "4.0.1", optional = true }
axum = { version = "0.5", optional = true }
poem = { version = "1.3", optional = true }
poem-openapi = { version = "1.3", optional = true }
http = { version = "0.2", optional = true }

[dev-dependencies]
actix-rt = "2"
config = "0.12"
hyper = "0.14"
lightspeed_logger = { version = "0.49.0", path = "../logger" }
poem = { version = "1.3", features = ["test"] }
poem-openapi = { version = "1.3", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tower = "0.4"

[features]
default = []

axum = ["dep:axum", "web"]
actix_web = ["dep:actix-web", "web"]
c3p0 = ["dep:c3p0_common"]
poem = ["dep:poem", "web"]
poem_openapi = ["poem", "dep:poem-openapi"]
web = ["http"]