[package]
name = "lightspeed_core"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
c3p0 = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

axum = { workspace = true, optional = true }

[dev-dependencies]
config = { workspace = true }
http-body-util = { workspace = true }
lightspeed_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tower = { workspace = true }

[features]
default = []

axum = ["dep:axum"]
