[package]
name = "lightspeed_email"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
lightspeed_core = { workspace = true }
lettre = { workspace = true, features = ["smtp-transport", "builder", "hostname", "pool", "tokio1-rustls-tls"] }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }

[dev-dependencies]
config = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

lightspeed_logger = { workspace = true }

