[package]
name = "lightspeed_email"
license = "MIT"
version = "0.45.4"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
lightspeed_core = { version = "0.45.4", path = "../core" }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "hostname", "pool", "tokio1-rustls-tls"] }
log = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = "1"

[dev-dependencies]
testcontainers = "0.12"
tokio = { version = "1", features = ["macros", "rt"] }

lightspeed_logger = { version = "0.45.4", path = "../logger" }

