[package]
name = "lightspeed_file_store"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
lightspeed_core = { workspace = true }
c3p0 = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }

mime = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }

axum = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true, features = ["io"] }

[dev-dependencies]
config = { workspace = true }
http-body-util = { workspace = true }
lightspeed_logger = { workspace = true }
maybe-once = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
test_utils = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }

[features]
default = []

axum = ["dep:axum", "lightspeed_core/axum", "mime", "mime_guess", "tokio-util"]
mysql = ["c3p0/sqlx_mysql"]
postgres = ["c3p0/sqlx_postgres"]
sqlite = ["c3p0/sqlx_sqlite"]
