[package]
name = "lightspeed_hash"
license = "MIT"
version = "0.40.1"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "Hash functions."
edition = "2018"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = ["hash", "validation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightspeed_core = { version = "0.40.1", path = "../core" }

async-trait = "0.1"
base64 = "0.13"
log = "0.4"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
typescript-definitions = { package = "typescript-definitions-ufo-patch", version = "0.1.11" }

[dev-dependencies]
lightspeed_logger = { version = "0.40.1", path = "../logger" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
