[package]
name = "lightspeed"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c3p0 = { workspace = true, optional = true }
lightspeed_auth = { workspace = true, optional = true }
lightspeed_cache = { workspace = true, optional = true }
lightspeed_cms = { workspace = true, optional = true }
lightspeed_core = { workspace = true, optional = true }
lightspeed_email = { workspace = true, optional = true }
lightspeed_file_store = { workspace = true, optional = true }
lightspeed_hash = { workspace = true, optional = true }
lightspeed_logger = { workspace = true, optional = true }
lightspeed_scheduler = { workspace = true, optional = true }

[features]
default = ["core"]

c3p0 = ["dep:c3p0"]

auth = ["dep:lightspeed_auth", "c3p0"]
cache = ["dep:lightspeed_cache"]
cms = ["dep:lightspeed_cms"]
core = ["dep:lightspeed_core"]
email = ["dep:lightspeed_email"]
file_store = ["dep:lightspeed_file_store", "c3p0"]
hash = ["dep:lightspeed_hash"]
logger = ["dep:lightspeed_logger"]
scheduler = ["dep:lightspeed_scheduler"]

cache_moka = ["cache", "lightspeed_cache/moka"]

axum = ["lightspeed_core?/axum", "lightspeed_file_store?/axum"]

postgres = [
    "lightspeed_auth?/postgres", 
    "lightspeed_cms?/postgres"
]
sqlx_mysql = [
    "lightspeed_auth?/sqlx_mysql", 
    "lightspeed_cms?/sqlx_mysql"
]
sqlx_postgres = [
    "lightspeed_auth?/sqlx_postgres", 
    "lightspeed_cms?/sqlx_postgres", 
    "lightspeed_file_store?/sqlx_postgres"
]
sqlx_sqlite = [
    "lightspeed_auth?/sqlx_sqlite", 
    "lightspeed_cms?/sqlx_sqlite", 
    "lightspeed_file_store?/sqlx_sqlite"
]
