[package]
name = "lightspeed"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c3p0 = { workspace = true, optional = true }
lightspeed_account_management = { workspace = true, optional = true }
lightspeed_cache = { workspace = true, optional = true }
lightspeed_core = { workspace = true, optional = true }
lightspeed_email = { workspace = true, optional = true }
lightspeed_file_store = { workspace = true, optional = true }
lightspeed_hash = { workspace = true, optional = true }
lightspeed_logger = { workspace = true, optional = true }
lightspeed_scheduler = { workspace = true, optional = true }
lightspeed_validator = { workspace = true, optional = true }

[features]
default = ["core"]

c3p0 = ["dep:c3p0"]

account_management = ["dep:lightspeed_account_management", "c3p0"]
cache = ["dep:lightspeed_cache"]
core = ["dep:lightspeed_core"]
email = ["dep:lightspeed_email"]
file_store = ["dep:lightspeed_file_store", "c3p0"]
hash = ["dep:lightspeed_hash"]
logger = ["dep:lightspeed_logger"]
scheduler = ["dep:lightspeed_scheduler"]
validator = ["dep:lightspeed_validator"]

axum = ["lightspeed_core?/axum", "lightspeed_file_store?/axum"]

postgres = [
    "lightspeed_account_management?/postgres", 
    "lightspeed_file_store?/postgres"
]
mysql = [
    "lightspeed_account_management?/mysql",
    "lightspeed_file_store?/mysql"
]
sqlite = [
    "lightspeed_account_management?/sqlite",
    "lightspeed_file_store?/sqlite"
]
