[package]
name = "lightspeed_logger"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = ["tracing-log", "ansi", "fmt"] }


[dev-dependencies]
config = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }