[package]
name = "lightspeed_logger"
license = "MIT"
version = "0.45.3"
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
clap = { version = "3.1", default-features = false, features = ["derive", "env", "std"] }
log = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "ansi", "fmt"] }


[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }