[package]
name = "lightspeed_scheduler"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "An in-process scheduler for periodic jobs. Schedule lets you run Rust functions on a cron-like schedule."
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = ["schedule", "cron", "job", "periodic"]

[dependencies]
arc-swap = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing = { workspace = true, optional = true}
tracing-futures = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
tracing = ["dep:tracing", "dep:tracing-futures"]

